<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_username_desc1_summary_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tv_username_desc1_summary_mypage"
            android:textSize="13sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/nanumsquare_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_username_summary_mypage"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_type_img_summary_mypage" />

        <TextView
            android:id="@+id/tv_username_summary_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_extrabold"
            tools:text="UserName"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username_desc1_summary_mypage"
            app:layout_constraintEnd_toStartOf="@id/tv_username_desc2_summary_mypage"
            app:layout_constraintStart_toEndOf="@+id/tv_username_desc1_summary_mypage"
            app:layout_constraintTop_toTopOf="@+id/tv_username_desc1_summary_mypage" />



        <TextView
            android:id="@+id/tv_username_desc2_summary_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_username_desc2_summary_mypage"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:fontFamily="@font/nanumsquare_regular"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username_summary_mypage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_username_summary_mypage"
            app:layout_constraintTop_toTopOf="@+id/tv_username_summary_mypage" />

        <TextView
            android:id="@+id/tv_type_summary_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_type_summary_mypage"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/nanumsquare_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_desc1_summary_mypage" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/tl_summary_mypage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type_summary_mypage">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_best"
                    />

                <TextView
                    android:id="@+id/tv_type_desc1_summary_mypage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/nanumsquare_regular"
                    android:text="@string/tv_type_desc1_summary_mypage"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_run_shoes" />

                <TextView
                    android:id="@+id/tv_type_desc2_summary_mypage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanumsquare_regular"
                    android:text="@string/tv_type_desc2_summary_mypage"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_speed" />

                <TextView
                    android:id="@+id/tv_type_desc3_summary_mypage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/nanumsquare_regular"
                    android:text="@string/tv_type_desc3_summary_mypage"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_username_summary_mypage"
            app:layout_constraintBottom_toBottomOf="@id/tl_summary_mypage"
            android:background="#88000000"
            android:text="아직 충분한 데이터가 모이지 않았습니다.\n 열심히 운동해주세요!"
            android:gravity="center"
            android:fontFamily="@font/cookierun_black"
            android:textColor="#ffffff"
            android:textSize="21sp"/>


        <View
            android:id="@+id/v_separator1_summary_mypage"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="32sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="#AAAAAA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_summary_mypage" />

        <ImageView
            android:id="@+id/iv_type_img_summary_mypage"
            android:layout_width="196dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_round_shape_white"
            android:src="@drawable/ic_profile_desc"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/tv_badges_summary_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquare_bold"
            android:text="@string/tv_badges_summary_mypage"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_separator1_summary_mypage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_badges_summary_mypage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_badges_summary_mypage"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            app:spanCount="4"
            tools:itemCount="7"
            tools:listitem="@layout/item_badge_mypage" />

        <TextView
            android:id="@+id/tv_no_badges_summary_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_badges_summary_mypage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="아직 배지가 없어요! \n챌린지를 시작해서 배지를 얻어보세요!"
            android:visibility="gone"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/cookierun_bold"
            android:textColor="#999999"
            android:layout_marginTop="24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#AAAAAA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_goneMarginTop="108dp"
            app:layout_constraintTop_toBottomOf="@id/rv_badges_summary_mypage"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

